[gd_scene load_steps=2 format=3 uid="uid://5gpwcqpsnti4"]

[ext_resource type="Script" path="res://src/ui/stats/container/stat_container.gd" id="1_v7et3"]

[node name="StatContainer" type="HBoxContainer"]
custom_minimum_size = Vector2(190, 0)
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
theme_override_constants/separation = 10
script = ExtResource("1_v7et3")

[node name="StatLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 0
text = "Stat: "

[node name="AmountLabel" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
text = "10%"
horizontal_alignment = 2
